[package]
name = "tokio-fastcgi"
version = "0.1.0"
authors = ["William R. Fraser <wfraser@codewise.org>"]
edition = "2018"

[dependencies]
byteorder = "1.0"
bytes = "0.5"
enum_primitive = "0.1"
futures = "0.3"
log = "0.3"
#tokio-codec = "0.1"
#tokio-core = ">=0.1.13"
#tokio-io = "0.1"
#tokio-proto = "0.1"
#tokio-service = "0.1"
#tokio = { version = "0.2", features = [] }
tokio-util = { version = "0.3", features = ["codec"] }

[dev-dependencies]
#tokio-uds = "0.2"
tokio = { version = "0.2", features = ["macros", "uds"] }
env_logger = "0.4"
